doc/Update ESP_Wake_Words_Customization doc

--- a/wake_word_engine/乐鑫语音唤醒词定制流程.md
+++ b/wake_word_engine/乐鑫语音唤醒词定制流程.md
@@ -4,7 +4,7 @@
 
 乐鑫提供 离线语音唤醒词 定制服务，详情如下：
 
- 1. “嗨乐鑫“ ”Alexa” “Espressif” 等官方公开的唤醒词，客户可直接商用
+ 1. “嗨乐鑫“，”你好小鑫”，“你好小智”和“嗨Jeson” 等官方公开的唤醒词，客户可直接商用
 	- 如 ADF／ASR Demo 提供的离线命令词提供
 	- 乐鑫会逐渐开放更多的商用 Free 关键词
 
