docs(wn): Update wakenet README

--- a/docs/zh_cn/wake_word_engine/乐鑫语音唤醒词定制流程.rst
+++ b/docs/zh_cn/wake_word_engine/乐鑫语音唤醒词定制流程.rst
@@ -6,17 +6,16 @@
 
 乐鑫提供 离线语音唤醒词 定制服务，详情如下：
 
-1. “嗨乐鑫“，”你好小鑫”，“你好小智”和“嗨Jeson”
+1. “嗨乐鑫“，”你好小鑫”
    等官方公开的唤醒词，客户可直接商用
 
-   -  如 ADF／ASR Demo 提供的离线命令词提供
-   -  乐鑫会逐渐开放更多的商用 Free 关键词
+   -  如 ADF／ASR Demo 提供的离线命令词,同时乐鑫会逐渐开放更多的商用 Free 关键词
 
 2. 除官方开放的唤醒词，可接受客户定制服务，分如下两种情况
 
    -  如果客户提供 唤醒词语料
 
-      -  需要提供大于 1.5 万条合格的语料（语料需求见下文）
+      -  需要提供大于 2 万条合格的语料（语料需求见下文）
       -  语料提供给乐鑫后，需要 2～3 周进行模型训练及调优
       -  根据量级收取少量模型定制费用
 
